# wxApp

./: .gitignore  CMakeLists.txt  COMPILE - Linux 64bit.md  COMPILE - macOS.md  COMPILE.linux.arch.64bit.md  COMPILE.linux.ubuntu.64bit.md  COMPILE.macOS.md  COMPILE.win.md  COMPILE.win32.MinGW.md  INSTALL - Linux 64bit.md  INSTALL - macOS.md  INSTALL - win64.txt  Makefile  MingGW-Instructions.md  README.md  README.pt-BR.md  copy_res_osx.sh  fix_osx_dylibs.sh  main.go  make_dmg.sh  openicp.wxcp  openicp.xrc
cmake/modules/: CMakeRC.cmake  FindCryptoPP.cmake  FindOpenSSLHacky.cmake
drafts/: V1.fbp  V1.wxcp  noname.cpp  noname.h
gui/: COMPILE.macOS.md
gui/include/: CAStoreClass.h  CertClass.h  EntityInfoClass.h  ICPApp.h
gui/res/: Info.plist  V1.wxcp  installer.nsi
gui/res/test-chain/: AlonsCorp.p12  openssl.cnf
gui/src/: CertsPanelClass.cpp  PKCS12Class.cpp
gui/tools/osx/: copy_res.sh  make_dmg.sh
gui/tools/win/: copy_res.sh
include/: CAStoreClass-Data.h  CAStoreClass.h  CertClass.h  CertsPanelClass.h  Common.h  ConfigClass.h  ICPApp.h  NewCertPanelView.h  PKCS12Class.h  SignPanelClass.h  SignPanelView.h  SignatureClass.h  VerifyPanelClass.h  VerifyPanelView.h  Version.h  cert_class.h  certs_panel.h  common.h  config.h  entity_class.h  icon-32.xpm  main.h  pkcs12_class.h  sign_panel.h
lib/: signed-data.go  signer-info.go
lib/cli/: main.go
openssl-1.1.0h/: Makefile.shared
res/: Info.plist  V1.cpp  V1.h  V1.wxcp  V1_drafts_bitmaps.cpp  github.gjvnq.openicpbr.desktop  installer.nsi  logo.icns  openicp.manifest  ui.xrc  win-res.rc
res/test-chain/: beltrano.crt  beltrano.pfx  ciclano.crt  ciclano.pfx  fulano.crt  fulano.p12  fulano.pfx  gen_cert_and_csr.sh  intermediate-ca-chain.crt  root.crt  root.pfx  root.txt  sign_csr.sh
res/test-chain/cert-chain/: 0a729c15.0  12190298.0  1526e8dd.0  188183c2.0  192d601d.0  1c974899.0  1e202541.0  1e54e6fa.0  1f61d2ac.0  1fa9e0f7.0  1fbdb870.0  2474fb49.0  254ebc45.0  27f28737.0  2932c122.0  2bf7a100.0  2ff77eb8.0  31f52d07.0  35570322.0  3b65c396.0  3bdbf40b.0  3c2422fd.0  3c597759.0  40014355.0  4152499a.0  44d1e97d.0  45bcd934.0  4886f724.0  4af6d27a.0  4c3bc7f6.0  4d324581.0  5108a78a.0  53c0369a.0  5910b0ea.0  5b4d2d8d.0  61def6af.0  63cb20e7.0  6a69fef4.0  6f910a9a.0  703774b4.0  (+54 more)
res/test-chain/certs/: ca.cert.pem
src/: CAStoreClass.cpp  CertClass.cpp  CertsPanelClass.cpp  ConfigClass.cpp  ConfigClass.cpp.skip  EntityInfoClass.cpp  ICPApp.cpp  ICPApp.h  NewCertPanelView.cpp  PKCS12Class.cpp  SignPanelClass.cpp  SignPanelClass.cpp.skip  SignPanelView.cpp  cert_class.cpp  certs_panel.cpp  certs_panel.h  certs_panel_crypto.cpp  cgo.h  common.h  entity_class.cpp  main-ui.cpp  main-ui.h  main.cpp  main.go  main.h  mainframe.cpp  mainframe.h  out.h  pkcs12_class.cpp  setup_cgo.c  setup_cgo.cpp  setup_cgo.h  setup_darwin.go  sign_panel.cpp  sign_panel.h  ui.xrc
src.old/: CAStoreClass.cpp  VerifyPanelClass.cpp
test/: CAStoreClassTest.cpp  CertClassTest.cpp  cert_class_tests.cpp  cert_class_tests_2.cpp
test-chain/: beltrano.p12  ciclano.p12  gen_cert.sh  gen_kp.sh  gen_p12.sh  index.txt  intermediate-ca.crt  root-ca.crt
test-chain/cert-chain/: 04104067.0  13921f7e.0  14747904.0  1ca88be5.0  1f489dc3.0  1fedc417.0  25c0dc92.0  2a3f64e7.0  2c44664c.0  335c0895.0  39e88356.0  3c95caaa.0  3d700488.0  428d6f6e.0  4edfea78.0  52b5f105.0  54e371e0.0  59b16466.0  5cefcab3.0  5f9a4278.0  65af9159.0  6abd076d.0  6c3d15a8.0  707978d0.0  71780a91.0  729b2e9f.0  79369908.0  7c4f3866.0  81270eac.0  8633134d.0  8c29ec7a.0  8d27cc12.0  8d623b19.0  8d670017.0  936dfcdd.0  960a1395.0  9ae4a488.0  9b839322.0  9d76c48e.0  AC_CERTISIGN-JUS_CODESIGNING_G5.crt  (+33 more)
tools/: libICP.sh
tools/linux/: copy_res.sh  make_tgz.sh
tools/osx/: copy_res.sh  fix_dylibs.sh
tools/win/: copy_dll.sh
